fixed all score deployment